@@ -1,5 +1,6 @@
 # Clarus Proxy
 [![Build Status](https://travis-ci.org/clarus-proxy/proxy.svg?branch=master)](https://travis-ci.org/clarus-proxy/proxy)
+
 The proxy component
 
 ## Pre Requisites
@@ -85,10 +86,28 @@ cd -
 ````
 
 ### Compile & Build the Proxy
+
 ```bash
 git clone https://github.com/clarus-proxy/proxy.git
 cd proxy
 git checkout develop
 mvn install
-cd -
-````
+```
+
+### Get a test policy and launch the proxy !
+
+__Linux systems__
+
+```bash
+cd install
+cp ../main/src/test/resources/patient_anonymisation.xml test.xml
+java -Djava.ext.dirs=./ext-libs/ -jar ./libs/proxy-main-1.2-SNAPSHOT.jar -sp test.xml 127.0.0.1
+```
+
+__Windows systems__
+
+```batch
+cd install
+copy ..\main\src\test\resources\patient_anonymisation.xml test.xml
+java -Djava.ext.dirs=.\ext-libs\ -jar .\libs\proxy-main-1.2-SNAPSHOT.jar -sp test.xml 127.0.0.1
+```
